--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities; */
 @import "tailwindcss";
+@import "leaflet/dist/leaflet.css";
+
 /* 
 body {
     @apply bg-gray-50 text-gray-800;
